fix: Add shenzhen

--- a/docs/source/notebooks/Lung Segmentation using UNets.ipynb
+++ b/docs/source/notebooks/Lung Segmentation using UNets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ee634a9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "79423d85",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ea71dd9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shenzhen   = dd.load(\"shenzhen\")"
+    "# shenzhen   = dd.load(\"shenzhen\")"
    ]
   },
   {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d7fcf190",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a9c286b6",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c059133d",
    "metadata": {},
    "outputs": [],
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "476adeff",
    "metadata": {},
    "outputs": [],
    "source": [
     "sequential = iaa.Sequential([\n",
     "    iaa.Resize({ \"width\": size_image[0], \"height\": size_image[1] }),\n",
-    "#     iaa.CLAHE()\n",
+    "    iaa.CLAHE()\n",
     "])"
    ]
   },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "54cb2d0c",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0c275ba2",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "05a4f79d",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9474125d",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d29e9686",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f8ccf0ef",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1561056b",
    "metadata": {},
    "outputs": [],
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f753ab41",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "unet.plot(show_shapes = True)"
+    "# unet.plot(show_shapes = True)"
    ]
   },
   {
@@ -231,10 +231,27 @@
    "execution_count": null,
    "id": "97d3756b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 138 images belonging to 1 classes.\n",
+      "Found 138 images belonging to 1 classes.\n"
+     ]
+    }
+   ],
    "source": [
-    "unet.fit(generator, batch_size = batch_size, verbose = 2)"
+    "unet.fit(generator, batch_size = batch_size, verbose = 2, steps_per_epoch = 1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9257c74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
