fix: add metrics

--- a/docs/source/notebooks/Lung Segmentation using UNets.ipynb
+++ b/docs/source/notebooks/Lung Segmentation using UNets.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24dd2a0",
+   "id": "73731e70",
    "metadata": {},
    "source": [
     "#### Constants"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745a5df4",
+   "id": "690ce0f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9837b3e6",
+   "id": "91d2012a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c524856",
+   "id": "c892e7f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aa84caaf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "names   = (\"montgomery\",)\n",
@@ -169,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd80325f",
+   "id": "cdc9f943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,17 +190,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61281fe",
+   "id": "b21dd663",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import tee, islice"
+    "from itertools import islice"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eed5a629",
+   "id": "60e06393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,13 +210,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4e831f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = islice(test, n_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3297c6c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, train_copy = tee(train)\n",
-    "samples = islice(train_copy, n_samples)\n",
-    "\n",
     "for image, mask in samples:\n",
     "    segplot(image[0], mask[0])"
    ]
@@ -262,17 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b569bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "steps_per_epoch  = train.n_samples\n",
-    "validation_steps = val.n_samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "eb8f7fda",
    "metadata": {
     "scrolled": false
@@ -280,15 +278,13 @@
    "outputs": [],
    "source": [
     "trainer = Trainer()\n",
-    "history = trainer.fit(unet, train, val = val, epochs = epochs,\n",
-    "                      steps_per_epoch  = steps_per_epoch,\n",
-    "                      validation_steps = validation_steps)"
+    "history = trainer.fit(unet, train, val = val, epochs = epochs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965c0ce1",
+   "id": "18e56221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,21 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test, test_copy = tee(test)\n",
-    "samples = islice(test_copy, n_samples)\n",
-    "\n",
-    "predict = unet.predict(samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c00544f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i, (image, mask) in enumerate(test):\n",
-    "#     segplot(image, mask, predict[i])"
+    "predict = unet.predict(test)"
    ]
   }
  ],
