--- a/docs/source/notebooks/Deep AUC Maximization.ipynb
+++ b/docs/source/notebooks/Deep AUC Maximization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "cc70b635",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "19e37af6",
    "metadata": {},
    "outputs": [],
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "68ed48e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "train, val = split_dataset(cifar10[\"train\"], splits = (0.7, 0.3))\n",
-    "test       = cifar10[\"test\"]"
+    "test = cifar10[\"test\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1c15336a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6a2ae03a",
    "metadata": {},
    "outputs": [],
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e3d1f3dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dam.compile()"
+    "dam.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ada71884",
    "metadata": {},
    "outputs": [],
