--- a/docs/source/notebooks/Lung Segmentation using UNets.ipynb
+++ b/docs/source/notebooks/Lung Segmentation using UNets.ipynb
@@ -36,7 +36,7 @@
     "    AttentionUNet,\n",
     "    Trainer\n",
     ")\n",
-    "from deeply.plots import segplot, history_plot\n",
+    "from deeply.plots import segplot, history as history_plot\n",
     "from deeply.datasets.util import split as split_dataset\n",
     "from deeply.generators import ImageMaskGenerator\n",
     "\n",
@@ -86,7 +86,16 @@
    "execution_count": 4,
    "id": "9b70d643",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-09-02 19:01:36.317432: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "unet = UNet(x = width, y = height, n_classes = 1, final_activation = \"sigmoid\",\n",
     "            batch_norm = False, padding = \"same\")"
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d76240d3",
    "metadata": {},
    "outputs": [],
@@ -149,9 +158,66 @@
    "execution_count": null,
    "id": "aa84caaf",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-09-02 19:01:45.195827: W tensorflow/core/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"Not found: Could not locate the credentials file.\". Retrieving token from GCE failed with \"Failed precondition: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata\".\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDownloading and preparing dataset Unknown size (download: Unknown size, generated: Unknown size, total: Unknown size) to /Users/achilles/tensorflow_datasets/montgomery/1.0.0...\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e5dfdb79cce74dc08b44ce0ed2f46da0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Completed...: 0 url [00:00, ? url/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae2cff4eb85f4053830394137ea89a0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Size...: 0 MiB [00:00, ? MiB/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3fddfe15a1444beba55db354678e8e79",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction completed...: 0 file [00:00, ? file/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "names   = (\"montgomery\",)\n",
     "\n",
@@ -184,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "705b6340",
    "metadata": {},
    "outputs": [],
@@ -244,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e9dbe71e",
    "metadata": {},
    "outputs": [],
@@ -256,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1812a8c6",
    "metadata": {},
    "outputs": [],
@@ -266,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1024ad65",
    "metadata": {},
    "outputs": [],
@@ -366,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
