feat: make deeply byutil compat

--- a/docs/source/notebooks/Lung Segmentation using UNets.ipynb
+++ b/docs/source/notebooks/Lung Segmentation using UNets.ipynb
@@ -40,11 +40,11 @@
     "from deeply.datasets.util import split as split_dataset\n",
     "from deeply.generators import ImageMaskGenerator\n",
     "\n",
-    "from deeply.util.system import makedirs\n",
+    "from bpyutils.util.system import makedirs\n",
     "\n",
-    "from deeply.util.image  import augment as augment_images\n",
+    "from deeply.util.  import augment as augment_images\n",
     "\n",
-    "from deeply._compat import iteritems\n",
+    "from bpyutils._compat import iteritems\n",
     "\n",
     "import deeply.datasets as dd\n",
     "\n",
