--- a/docs/notebooks/U-Net.ipynb
+++ b/docs/notebooks/U-Net.ipynb
@@ -241,13 +241,7 @@
       "38/60 [==================>...........] - ETA: 1:28 - loss: 0.3558 - categorical_accuracy: 0.5197 - dice_coefficient: 0.1254 - jaccard_index: 0.1177 - tversky_index: 0.2374Begin Training Batch...\n",
       "39/60 [==================>...........] - ETA: 1:24 - loss: 0.3467 - categorical_accuracy: 0.5321 - dice_coefficient: 0.1237 - jaccard_index: 0.1162 - tversky_index: 0.2357Begin Training Batch...\n",
       "40/60 [===================>..........] - ETA: 1:20 - loss: 0.3380 - categorical_accuracy: 0.5437 - dice_coefficient: 0.1220 - jaccard_index: 0.1147 - tversky_index: 0.2342Begin Training Batch...\n",
-      "41/60 [===================>..........] - ETA: 1:16 - loss: 0.3298 - categorical_accuracy: 0.5549 - dice_coefficient: 0.1205 - jaccard_index: 0.1134 - tversky_index: 0.2327Begin Training Batch...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "41/60 [===================>..........] - ETA: 1:16 - loss: 0.3298 - categorical_accuracy: 0.5549 - dice_coefficient: 0.1205 - jaccard_index: 0.1134 - tversky_index: 0.2327Begin Training Batch...\n",
       "42/60 [====================>.........] - ETA: 1:12 - loss: 0.3219 - categorical_accuracy: 0.5655 - dice_coefficient: 0.1190 - jaccard_index: 0.1121 - tversky_index: 0.2312Begin Training Batch...\n",
       "43/60 [====================>.........] - ETA: 1:08 - loss: 0.3144 - categorical_accuracy: 0.5756 - dice_coefficient: 0.1176 - jaccard_index: 0.1108 - tversky_index: 0.2299Begin Training Batch...\n",
       "44/60 [=====================>........] - ETA: 1:03 - loss: 0.3782 - categorical_accuracy: 0.5852 - dice_coefficient: 0.1316 - jaccard_index: 0.1217 - tversky_index: 0.2434Begin Training Batch...\n",
@@ -343,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
